infrastructure/gatekeeper/tests/disallowedtags/fail.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: my-app
spec:
  containers:
    - name: app
      image: nginx:latest
